<resources>
    <string name="app_name">NewsHeadlines</string>
    <string name="login">Login</string>
    <string name="enter_pwd">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_fullname">Enter Fullname</string>
    <string name="new_user_signup">Don\'t have an account? Sign Up!</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="password_mismatch">Passwords does not match</string>
    <string name="empty_field_error">Field can\'t be empty</string>
    <string name="valid_email_error">Please enter a valid email address</string>
    <string name="password_weak_error">Password too weak!</string>
    <string name="login_failed">Login Failed !!\nPlease check credentials.</string>
    <string name="alert">Alert!!</string>
    <string name="ok">OK</string>
    <string name="noData">Unable to reach Server !!</string>
    <string name="contents">Contents</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="author">Author : </string>
    <string name="copyright_google">Copyright © Google News API</string>
    <string name="logout">Logout</string>
</resources>