<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgNews"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_300"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@drawable/border_image"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:padding="1dp"
            android:src="@drawable/img_googlenews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgNews"
            android:gravity="center"
            android:id="@+id/ll_author">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="@dimen/font_15sp"
                android:textStyle="italic"
                android:textColor="@color/purple_700"
                android:layout_marginEnd="@dimen/dp_10"
                android:text="@string/author"/>
            <TextView
                android:id="@+id/tvNewsAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="@dimen/font_15sp"
                tools:text="sdsdsadsadsadsad" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:clipToPadding="false"
            android:clipChildren="false"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_author">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:text="@string/title"
                    android:textColor="@color/purple_700"
                    android:textSize="@dimen/font_21sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:background="@color/light_grey" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:textSize="@dimen/font_12sp"
                    tools:text="sdsdsadsadsadsad" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_Contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:clipToPadding="false"
            android:clipChildren="false"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_Title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:text="@string/contents"
                    android:textColor="@color/purple_700"
                    android:textSize="@dimen/font_21sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:background="@color/light_grey" />

                <TextView
                    android:id="@+id/tvContents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:textSize="@dimen/font_12sp"
                    tools:text="sdsdsadsadsadsad" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:clipToPadding="false"
            android:clipChildren="false"
            app:cardElevation="10dp"
            android:id="@+id/cardView_Desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_Contents">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:text="@string/description"
                    android:textColor="@color/purple_700"
                    android:textSize="@dimen/font_21sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:background="@color/light_grey" />

                <TextView
                    android:id="@+id/tvNewsDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:textSize="@dimen/font_12sp"
                    tools:text="sdsdsadsadsadsad" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_15"
            android:text="@string/copyright_google"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/font_15sp"
            app:layout_constraintTop_toBottomOf="@+id/cardView_Desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="italic" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>